--- a/app/server/controllers/snapshots/entertainment.html
+++ b/app/server/controllers/snapshots/entertainment.html
@@ -660,7 +660,7 @@
             
             
             <article class="entry card post-list widget widget_categories p-3">
-               <p>Best Nigeria News Sources You can trust.</p>
+               <p>The latest headlines from major news sources in Nigeria and abroad..</p>
               <ul>
                 <!-- ngIf: sharedHealines.length > 0 -->
                 <li style="padding-top: 0">
