--- a/app/server/controllers/snapshots/football.html
+++ b/app/server/controllers/snapshots/football.html
@@ -646,7 +646,7 @@
 
         <!-- Posts -->
         <div class="col-lg-8 blog__content mb-72">
-           <p>Best Nigeria News Sources You can trust.</p>
+           <p>The latest headlines from major news sources in Nigeria and abroad..</p>
           <!-- Worldwide News -->
           <section class="section">
             <div class="title-wrap title-wrap--line" style="">
@@ -848,7 +848,7 @@
 
           <aside class="widget widget_categories">
             <h4 class="widget-title">Top Stories</h4>
-             <p>Best Nigeria News Sources You can trust.</p>
+             <p>The latest headlines from major news sources in Nigeria and abroad..</p>
             <input type="text" name="" placeholder="Filter by headline keywords, news source or date (mm/dd)" class="form-control ng-pristine ng-untouched ng-valid ng-empty" ng-model="feature">
             <ul>
               <!-- ngRepeat: n in featured | orderBy: '-pubDate' | filter : feature -->
