--- a/app/server/controllers/snapshots/sports.html
+++ b/app/server/controllers/snapshots/sports.html
@@ -462,7 +462,7 @@
       </div>
     </header> <!-- end navigation -->
   
-       <p>Best Nigeria News Sources You can trust.</p>
+       <p>The latest headlines from major news sources in Nigeria and abroad..</p>
     <!-- Trending Now -->
     <div class="container">
       <div class="trending-now">
