--- a/app/server/controllers/snapshots/latest.html
+++ b/app/server/controllers/snapshots/latest.html
@@ -462,7 +462,7 @@
       </div>
     </header> <!-- end navigation -->
   
-
+     <p>The latest headlines from major news sources in Nigeria and abroad..</p>
     <!-- Trending Now -->
     <div class="container">
       <div class="trending-now">
@@ -826,7 +826,7 @@
         <!-- Sidebar 1 -->
         <aside class="col-lg-4 sidebar sidebar--1 sidebar--right">
 
-          <p>Best Nigeria News Sources You can trust.</p>
+         
          
 
           <aside class="widget widget_categories">
