--- a/app/server/controllers/snapshots/lifestyle.html
+++ b/app/server/controllers/snapshots/lifestyle.html
@@ -847,7 +847,7 @@
           </aside>--> <!-- end widget categories -->
 
           <aside class="widget widget_categories">
-           <p>Best Nigeria News Sources You can trust.</p>
+           <p>The latest headlines from major news sources in Nigeria and abroad..</p>
             <h4 class="widget-title">Top Stories</h4>
             <input type="text" name="" placeholder="Filter by headline keywords, news source or date (mm/dd)" class="form-control ng-pristine ng-untouched ng-valid ng-empty" ng-model="feature">
             <ul>
