--- a/app/server/controllers/snapshots/technology.html
+++ b/app/server/controllers/snapshots/technology.html
@@ -658,7 +658,7 @@
                <a href="" ng-click="getLink()" target="_blank" data-action="share/whatsapp/share" class="btn btn-simple btn-sm share-whatsapp"><i class="fa fa-share"></i> <i class="fa fa-heart" style="color: orange"></i> on whatsapp</a>
             </div>
             
-             <p>Best Nigeria News Sources You can trust.</p>
+             <p>The latest headlines from major news sources in Nigeria and abroad..</p>
             <article class="entry card post-list widget widget_categories p-3">
               
               <ul>
