--- a/app/server/controllers/snapshots/entertainment.html
+++ b/app/server/controllers/snapshots/entertainment.html
@@ -23,7 +23,7 @@
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script src="https://pagead2.googlesyndication.com/pagead/js/r20180924/r20180604/osd.js"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-7029454675847510.js"></script><script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-122985010-1"></script>
-  <script>
+  <!--<script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
@@ -37,7 +37,7 @@
       google_ad_client: "ca-pub-7029454675847510",
       enable_page_level_ads: true
     });
-  </script>
+  </script>-->
 
   <!-- Lazyload (must be placed in head in order to work) -->
   <script src="/assets/js/lazysizes.min.js"></script>
@@ -461,7 +461,12 @@
 
       </div>
     </header> <!-- end navigation -->
-  
+   <div class="container">
+      <p>Latest headlines from trusted news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
+      Be the first to read the latest news online.
+      </p>
+
+    </div>
 
     <!-- Trending Now -->
     <div class="container">
