--- a/app/server/controllers/snapshots/latest.html
+++ b/app/server/controllers/snapshots/latest.html
@@ -23,7 +23,7 @@
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script src="https://pagead2.googlesyndication.com/pagead/js/r20180924/r20180604/osd.js"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-7029454675847510.js"></script><script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-122985010-1"></script>
-  <script>
+  <!--<script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
@@ -37,7 +37,7 @@
       google_ad_client: "ca-pub-7029454675847510",
       enable_page_level_ads: true
     });
-  </script>
+  </script>-->
 
   <!-- Lazyload (must be placed in head in order to work) -->
   <script src="/assets/js/lazysizes.min.js"></script>
@@ -212,7 +212,7 @@
           <!-- Socials -->
           <div class="col-lg-6" style="text-align: right;padding-top: 10px;">
             <!--<a href="#" class="visited-link"><i class="fa fa-envelope"></i> &nbsp;mail@goodmorning9ja.com</a>&nbsp;&nbsp;&nbsp;-->
-            <a href="#" class="visited-link">Advertise &nbsp;&nbsp;<i class="fa fa-phone"></i> &nbsp;+234 809 6461 927</a>
+            <a href="#" class="visited-link">Advertise &nbsp;&nbsp;<i class="fa fa-phone"></i> &nbsp;</a>
             <!--<div class="socials nav__socials socials--nobase socials--white justify-content-end"> 
               <a class="social social-facebook" href="#" target="_blank" aria-label="facebook">
                 <i class="ui-facebook"></i>
@@ -461,8 +461,13 @@
 
       </div>
     </header> <!-- end navigation -->
-  
-     <p>The latest headlines from major news sources in Nigeria and abroad..</p>
+    <div class="container">
+      <p>Latest headlines from trusted news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
+      Be the first to read the latest news online.
+      </p>
+
+    </div>
+     
     <!-- Trending Now -->
     <div class="container">
       <div class="trending-now">
