--- a/app/server/controllers/snapshots/politics.html
+++ b/app/server/controllers/snapshots/politics.html
@@ -462,7 +462,12 @@
       </div>
     </header> <!-- end navigation -->
   
+     <div class="container">
+      <p>Latest headlines from trusted news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
+      Be the first to read the latest news online.
+      </p>
 
+    </div>
     <!-- Trending Now -->
     <div class="container">
       <div class="trending-now">
