--- a/app/server/controllers/snapshots/football.html
+++ b/app/server/controllers/snapshots/football.html
@@ -212,7 +212,7 @@
           <!-- Socials -->
           <div class="col-lg-6" style="text-align: right;padding-top: 10px;">
             <!--<a href="#" class="visited-link"><i class="fa fa-envelope"></i> &nbsp;mail@goodmorning9ja.com</a>&nbsp;&nbsp;&nbsp;-->
-            <a href="#" class="visited-link">Advertise &nbsp;&nbsp;<i class="fa fa-phone"></i> &nbsp;+234 809 6461 927</a>
+            <a href="#" class="visited-link">Advertise &nbsp;&nbsp;<i class="fa fa-phone"></i> &nbsp;</a>
             <!--<div class="socials nav__socials socials--nobase socials--white justify-content-end"> 
               <a class="social social-facebook" href="#" target="_blank" aria-label="facebook">
                 <i class="ui-facebook"></i>
@@ -462,7 +462,12 @@
       </div>
     </header> <!-- end navigation -->
   
+     <div class="container">
+      <p>Latest headlines from trusted news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
+      Be the first to read the latest news online.
+      </p>
 
+    </div>
     <!-- Trending Now -->
     <div class="container">
       <div class="trending-now">
