--- a/app/server/controllers/snapshots/technology.html
+++ b/app/server/controllers/snapshots/technology.html
@@ -461,7 +461,13 @@
 
       </div>
     </header> <!-- end navigation -->
-  
+    
+    <div class="container">
+      <p>Latest headlines from trusted news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
+      Be the first to read the latest news online.
+      </p>
+      <p>The latest headlines from news sources in Nigeria and abroad.</p>
+    </div>
 
     <!-- Trending Now -->
     <div class="container">
