--- a/app/server/controllers/snapshots/sports.html
+++ b/app/server/controllers/snapshots/sports.html
@@ -21,9 +21,9 @@
   <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/apple-touch-icon-114x114.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script src="https://pagead2.googlesyndication.com/pagead/js/r20180924/r20180604/osd.js"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-7029454675847510.js"></script><script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-122985010-1"></script>
-  <script>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!--<script src="https://pagead2.googlesyndication.com/pagead/js/r20180924/r20180604/osd.js"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-7029454675847510.js"></script><script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-122985010-1"></script>-->
+  <!--<script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
@@ -37,7 +37,7 @@
       google_ad_client: "ca-pub-7029454675847510",
       enable_page_level_ads: true
     });
-  </script>
+  </script>-->
 
   <!-- Lazyload (must be placed in head in order to work) -->
   <script src="/assets/js/lazysizes.min.js"></script>
@@ -46,7 +46,8 @@
 
   <!-- angular js  -->
 
-  <script src="/assets/js/angular-1.7.2/angular.min.js"></script><link rel="preload" href="https://adservice.google.com.ng/adsid/integrator.js?domain=goodmorning9ja.com"><script type="text/javascript" src="https://adservice.google.com.ng/adsid/integrator.js?domain=goodmorning9ja.com"></script><link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=goodmorning9ja.com"><script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=goodmorning9ja.com"></script>
+  <script src="/assets/js/angular-1.7.2/angular.min.js"></script>
+  <!--<link rel="preload" href="https://adservice.google.com.ng/adsid/integrator.js?domain=goodmorning9ja.com"><script type="text/javascript" src="https://adservice.google.com.ng/adsid/integrator.js?domain=goodmorning9ja.com"></script><link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=goodmorning9ja.com"><script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=goodmorning9ja.com"></script>-->
 
   <style type="text/css">
     .visited-link {
