--- a/app/server/controllers/snapshots/football.html
+++ b/app/server/controllers/snapshots/football.html
@@ -464,8 +464,8 @@
     </header> <!-- end navigation -->
   
      <div class="container">
-      <p>Latest headlines from trusted news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
-      Be the first to read the latest news online.
+      <p>Check out the latest football news from Spanish la liga, English Premier league, bundes liga, Italian Seria A, French League<br>
+      Barcelona FC, Chelsea, Real Madrid, Arsenal, Liverpool, Juventus, Manchester United, PSG, Bayern Munich, AC Milan etc.
       </p>
 
     </div>
