--- a/app/server/controllers/snapshots/latest.html
+++ b/app/server/controllers/snapshots/latest.html
@@ -467,7 +467,7 @@
     </header> <!-- end navigation -->
     <div class="container">
       <p>Latest headlines from trusted news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
-      Be the first to read the latest news online.
+      Latest Nigeria news, Politics, Football, Business, Lifestyle, Entertainment, world, Technology.
       </p>
 
     </div>
