--- a/app/server/controllers/snapshots/sports.html
+++ b/app/server/controllers/snapshots/sports.html
@@ -463,8 +463,8 @@
       </div>
     </header> <!-- end navigation -->
      <div class="container">
-      <p>Latest headlines from trusted news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
-      Be the first to read the latest news online.
+      <p>Latest sports headlines from trusted news sources in Nigeria and abroad. See latest headlines in football, basketball, olympics, boxing, volleyball, racing, world cup, European cup etc.<br>
+      Be the first to read the latest sports online.
       </p>
       <p>The latest headlines from news sources in Nigeria and abroad.</p>
     </div>
