--- a/app/server/controllers/snapshots/latest.html
+++ b/app/server/controllers/snapshots/latest.html
@@ -466,7 +466,7 @@
       </div>
     </header> <!-- end navigation -->
     <div class="container">
-      <p>Latest headlines from trusted news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
+      <p>Latest headlines from online news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
       Latest Nigeria news, Politics, Football, Business, Lifestyle, Entertainment, world, Technology.
       </p>
 
