--- a/app/server/controllers/snapshots/technology.html
+++ b/app/server/controllers/snapshots/technology.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en" ng-app="myApp" class="mediaqueries matchmedia ng-scope"><head><style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
-  <title>GM9ja</title>
+   <title>Latest news headlines in technology from Nigeria & world | Goodmorning9ja</title>
 
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
