changes for mobile

--- a/public/show-error.html
+++ b/public/show-error.html
@@ -183,7 +183,7 @@
   </header> <!-- end sidenav -->
 
   <main>
-    <h2 style="padding: 20px;width: 80%;margin: 50px auto">Oops! It seems your browser does not support javascript or it's turned off. Please you need browser that supports javascript to view this site. Try using <i>chrome</i> or <i>firefox</i> as default browser.</h2>
+    <h2 style="padding: 20px;width: 80%;margin: 50px auto">Oops! It seems this browser does not support javascript or has compactibility issues with javascript. Try using <i>chrome</i> or <i>firefox</i> or any other browser that supports javascript.</h2>
 
     <p style="padding: 20px;width: 80%;margin: 50px auto">landing page <span style="color: blue">www.goodmorning9ja.com</span> or you re-visit the shared link using any of above browers.</p>
   </main>
